<resources>
    <string name="app_name">InstantCab</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Home</string>
    <string name="google_maps_key">AIzaSyB3pJ8XeAILHM2w5hLwh7LYxjhg7Th6r_E</string>
    <string name="current_request">Current Request</string>
    <string name="from">From</string>
    <string name="cancel_request">cancel request</string>
    <string name="confirm_request" />
    <string name="make_a_payment">Make a Payment</string>
    <string name="pay">Pay</string>
    <string name="tip_your_driver">Tip your driver</string>
    <string name="tip">TIP</string>
    <string name="total">Total cost $%.2f</string>
    <string name="confirm">Confirm</string>
    <string name="how_was_your_experience_n_with_the_driver">How was your experience\n with the Driver?</string>
    <string name="bad">Bad</string>
    <string name="good">Good</string>
    <string name="email_address">Email Address</string>
    <string name="phone">Phone</string>
    <string name="rating">Rating</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="choose_email">Choose a email send App</string>
</resources>
