<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/current_request"
        android:textSize="45sp"
        android:textStyle="normal|bold|italic"
        android:background="@android:color/darker_gray">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/from"
        android:textSize="36sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="Hub Mall"
        android:textSize="24sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="To"
        android:textSize="36sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="Southgate Mall"
        android:textSize="24sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/driver_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Waiting for rider to confirm"
        android:textSize="32sp"
        android:textStyle="italic|bold">
    </TextView>

    <TextView
        android:id="@+id/driver_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="John Doe"
        android:textSize="24sp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Fare"
        android:textSize="36sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/fare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="$15.00"
        android:textSize="24sp"
        android:textStyle="bold">

    </TextView>


    <Button
        android:id="@+id/cancel_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_request"
        android:background="#C12D2D38"
        android:visibility="visible"/>


</LinearLayout>