<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/banner_default"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/user"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/profile_default" />
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_activity_info"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:layout_collapseMode="pin">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Name"
                android:textSize="26sp"
                android:layout_margin="20dp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@android:color/background_dark"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    tools:text="Phone"
                    android:text="@string/phone"
                    android:textStyle="bold"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="16sp"
                        tools:text="123456789" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/num_edit"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@android:drawable/ic_menu_edit"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_call"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@android:drawable/ic_menu_call"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    tools:text="Email"
                    android:text="@string/email_address"
                    android:textStyle="bold"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pr_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="123@mail.com"
                        android:layout_gravity="center_vertical"
                        android:textSize="16sp"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/email_edit"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@android:drawable/ic_menu_edit"
                        tools:visibility="visible" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_email"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:src="@android:drawable/sym_action_email"
                        android:visibility="gone"
                        tools:visibility="visible" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    tools:text="Rating"
                    android:text="@string/rating"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/thumb_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="15dp"
                        android:drawableLeft="@android:drawable/btn_star_big_on"
                        android:gravity="bottom"
                        android:text="0"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/thumb_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="15dp"
                        android:drawableLeft="@android:drawable/btn_star_big_off"
                        android:gravity="bottom"
                        android:text="0"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>